test/libsolidity/syntaxTests/functionTypes/function_type_struct_undefined_member.sol
library L
{
	struct Nested
	{
		Non y;
	}
	function f(function(Nested memory) external) external pure {}
}
// ----
// DeclarationError: (32-35): Identifier not found or not unique.
